@@ -67,7 +67,7 @@ SUCH DAMAGE.
   <li><a href="#openbsdpmaxinstall">OpenBSD/pmax 2.8-BETA</a>
   <li><a href="#openbsdcatsinstall">OpenBSD/cats 4.0</a>
   <li><a href="#openbsdlandiskinstall">OpenBSD/landisk 4.4</a>
-  <li><a href="#helenos">HelenOS 0.2.0.5</a>
+  <li><a href="#helenos">HelenOS 0.3.0</a>
   <li><a href="#ultrixinstall">Ultrix/RISC 4.5</a>
   <li><a href="#sprite">Sprite for DECstation</a>
   <li><a href="#declinux">Debian GNU/Linux for DECstation</a>
@@ -1671,20 +1671,20 @@ landisk machine, see
 <p>To run HelenOS for ARM in GXemul:
 <ol>
   <li>Download the HelenOS kernel:<pre>
-	<a href="http://www.helenos.eu/releases/HelenOS-0.2.0.5-arm32-gxemul.boot">http://www.helenos.eu/releases/HelenOS-0.2.0.5-arm32-gxemul.boot</a>
+	<a href="http://www.helenos.eu/releases/HelenOS-0.3.0-arm32-gxemul.boot">http://www.helenos.eu/releases/HelenOS-0.3.0-arm32-gxemul.boot</a>
   </pre>
   <li>Start GXemul using the following command line:<pre>
-  	<b>gxemul -X -E testarm HelenOS-0.2.0.5-arm32-gxemul.boot</b>
+  	<b>gxemul -X -E testarm HelenOS-0.3.0-arm32-gxemul.boot</b>
   </pre>
 </ol>
 
 <p>To run HelenOS for MIPS in GXemul:
 <ol>
   <li>Download the HelenOS kernel:<pre>
-	<a href="http://www.helenos.eu/releases/HelenOS-0.2.0.5-mips32-gxemul.boot">http://www.helenos.eu/releases/HelenOS-0.2.0.5-mips32-gxemul.boot</a>
+	<a href="http://www.helenos.eu/releases/HelenOS-0.3.0-mips32-gxemul.boot">http://www.helenos.eu/releases/HelenOS-0.3.0-mips32-gxemul.boot</a>
   </pre>
   <li>Start GXemul using the following command line:<pre>
-  	<b>gxemul -X -E testmips -C 5Kc HelenOS-0.2.0.5-mips32-gxemul.boot</b>
+  	<b>gxemul -X -E testmips -C 5Kc HelenOS-0.3.0-mips32-gxemul.boot</b>
   </pre>
 	(Note the <tt>-C 5Kc</tt> option.)
 </ol>
